--- a/your-code/pandas_1.ipynb
+++ b/your-code/pandas_1.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,11 +44,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 186,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0     5.7\n",
+      "1    75.2\n",
+      "2    74.4\n",
+      "3    84.0\n",
+      "4    66.5\n",
+      "5    66.3\n",
+      "6    55.8\n",
+      "7    75.7\n",
+      "8    29.1\n",
+      "9    43.7\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Given list\n",
+    "lst = [5.7, 75.2, 74.4, 84.0, 66.5, 66.3, 55.8, 75.7, 29.1, 43.7]\n",
+    "\n",
+    "# Create a Pandas Series\n",
+    "series = pd.Series(lst)\n",
+    "\n",
+    "# Display the Series\n",
+    "print(series)"
    ]
   },
   {
@@ -62,11 +90,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 187,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "74.4\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "# Access the third value in the Series\n",
+    "third_value = series[2]\n",
+    "\n",
+    "# Display the third value\n",
+    "print(third_value)\n"
    ]
   },
   {
@@ -78,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,11 +137,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 189,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      0     1     2     3     4\n",
+      "0  53.1  95.0  67.5  35.0  78.4\n",
+      "1  61.3  40.8  30.8  37.8  87.6\n",
+      "2  20.6  73.2  44.2  14.6  91.8\n",
+      "3  57.4   0.1  96.1   4.2  69.5\n",
+      "4  83.6  20.5  85.4  22.8  35.9\n",
+      "5  49.0  69.0   0.1  31.8  89.1\n",
+      "6  23.3  40.7  95.0  83.8  26.9\n",
+      "7  27.6  26.4  53.8  88.8  68.5\n",
+      "8  96.6  96.4  53.4  72.4  50.1\n",
+      "9  73.7  39.0  43.2  81.6  34.7\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Given list of lists\n",
+    "b = [[53.1, 95.0, 67.5, 35.0, 78.4],\n",
+    "     [61.3, 40.8, 30.8, 37.8, 87.6],\n",
+    "     [20.6, 73.2, 44.2, 14.6, 91.8],\n",
+    "     [57.4, 0.1, 96.1, 4.2, 69.5],\n",
+    "     [83.6, 20.5, 85.4, 22.8, 35.9],\n",
+    "     [49.0, 69.0, 0.1, 31.8, 89.1],\n",
+    "     [23.3, 40.7, 95.0, 83.8, 26.9],\n",
+    "     [27.6, 26.4, 53.8, 88.8, 68.5],\n",
+    "     [96.6, 96.4, 53.4, 72.4, 50.1],\n",
+    "     [73.7, 39.0, 43.2, 81.6, 34.7]]\n",
+    "\n",
+    "# Create a Pandas DataFrame\n",
+    "df = pd.DataFrame(b)\n",
+    "\n",
+    "# Display the DataFrame\n",
+    "print(df)"
    ]
   },
   {
@@ -112,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,11 +208,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 191,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Column1  Column2  Column3  Column4  Column5\n",
+      "0     53.1     95.0     67.5     35.0     78.4\n",
+      "1     61.3     40.8     30.8     37.8     87.6\n",
+      "2     20.6     73.2     44.2     14.6     91.8\n",
+      "3     57.4      0.1     96.1      4.2     69.5\n",
+      "4     83.6     20.5     85.4     22.8     35.9\n",
+      "5     49.0     69.0      0.1     31.8     89.1\n",
+      "6     23.3     40.7     95.0     83.8     26.9\n",
+      "7     27.6     26.4     53.8     88.8     68.5\n",
+      "8     96.6     96.4     53.4     72.4     50.1\n",
+      "9     73.7     39.0     43.2     81.6     34.7\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Data\n",
+    "b = [[53.1, 95.0, 67.5, 35.0, 78.4],\n",
+    "     [61.3, 40.8, 30.8, 37.8, 87.6],\n",
+    "     [20.6, 73.2, 44.2, 14.6, 91.8],\n",
+    "     [57.4, 0.1, 96.1, 4.2, 69.5],\n",
+    "     [83.6, 20.5, 85.4, 22.8, 35.9],\n",
+    "     [49.0, 69.0, 0.1, 31.8, 89.1],\n",
+    "     [23.3, 40.7, 95.0, 83.8, 26.9],\n",
+    "     [27.6, 26.4, 53.8, 88.8, 68.5],\n",
+    "     [96.6, 96.4, 53.4, 72.4, 50.1],\n",
+    "     [73.7, 39.0, 43.2, 81.6, 34.7]]\n",
+    "\n",
+    "# Column names\n",
+    "columns = ['Column1', 'Column2', 'Column3', 'Column4', 'Column5']\n",
+    "\n",
+    "# Create DataFrame\n",
+    "df = pd.DataFrame(b, columns=columns)\n",
+    "\n",
+    "# Show the DataFrame\n",
+    "print(df)\n"
    ]
   },
   {
@@ -146,11 +264,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 192,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Column1  Column3  Column5\n",
+      "0     53.1     67.5     78.4\n",
+      "1     61.3     30.8     87.6\n",
+      "2     20.6     44.2     91.8\n",
+      "3     57.4     96.1     69.5\n",
+      "4     83.6     85.4     35.9\n",
+      "5     49.0      0.1     89.1\n",
+      "6     23.3     95.0     26.9\n",
+      "7     27.6     53.8     68.5\n",
+      "8     96.6     53.4     50.1\n",
+      "9     73.7     43.2     34.7\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "# Subset the DataFrame to include only 'Score 1', 'Score 3', and 'Score 5'\n",
+    "subset_df = df[['Column1', 'Column3', 'Column5']]\n",
+    "\n",
+    "# Show the subset DataFrame\n",
+    "print(subset_df)\n"
    ]
   },
   {
@@ -162,11 +303,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 193,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average Score 3 value is: 56.95000000000001\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "# Calculate the average of 'Column3' (which corresponds to Score 3)\n",
+    "average_score_3 = df['Column3'].mean()\n",
+    "\n",
+    "# Show the average value\n",
+    "print(f\"The average Score 3 value is: {average_score_3}\")\n"
    ]
   },
   {
@@ -178,11 +332,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 194,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The maximum value of Column4 is: 88.8\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# Calculate the maximum value of \"Column4\"\n",
+    "max_column4 = df['Column4'].max()\n",
+    "\n",
+    "# Display the maximum value\n",
+    "print(f\"The maximum value of Column4 is: {max_column4}\")"
    ]
   },
   {
@@ -194,11 +360,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 195,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The median of Column2 is: 40.75\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# Calculate the median of \"Column2\"\n",
+    "median_column2 = df['Column2'].median()\n",
+    "\n",
+    "# Display the median value\n",
+    "print(f\"The median of Column2 is: {median_column2}\")"
    ]
   },
   {
@@ -210,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,11 +409,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 197,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Median of UnitPrice: 1.25\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Create the DataFrame\n",
+    "df = pd.DataFrame(orders)\n",
+    "\n",
+    "# Calculate the median of 'UnitPrice'\n",
+    "median_score_2 = df['UnitPrice'].median()\n",
+    "print(\"Median of UnitPrice:\", median_score_2)"
    ]
   },
   {
@@ -247,11 +441,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 198,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Quantity Ordered: 2978\n",
+      "Total Revenue Generated: 637.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "# Calculate total quantity ordered\n",
+    "total_quantity = df['Quantity'].sum()\n",
+    "\n",
+    "# Calculate total revenue generated\n",
+    "total_revenue = df['Revenue'].sum()\n",
+    "\n",
+    "print(\"Total Quantity Ordered:\", total_quantity)\n",
+    "print(\"Total Revenue Generated:\", total_revenue)"
    ]
   },
   {
@@ -263,11 +474,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 199,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most Expensive Item Price: 11.95\n",
+      "Least Expensive Item Price: 0.18\n",
+      "Difference: 11.77\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "# Most expensive item price\n",
+    "most_expensive = df['UnitPrice'].max()\n",
+    "\n",
+    "# Least expensive item price\n",
+    "least_expensive = df['UnitPrice'].min()\n",
+    "\n",
+    "# Difference between the most and least expensive items\n",
+    "price_difference = most_expensive - least_expensive\n",
+    "\n",
+    "print(\"Most Expensive Item Price:\", most_expensive)\n",
+    "print(\"Least Expensive Item Price:\", least_expensive)\n",
+    "print(\"Difference:\", price_difference)"
    ]
   },
   {
@@ -279,12 +512,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 200,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Serial No.  GRE Score  TOEFL Score  University Rating  SOP  LOR   CGPA  \\\n",
+      "0           1        337          118                  4  4.5   4.5  9.65   \n",
+      "1           2        316          104                  3  3.0   3.5  8.00   \n",
+      "2           3        322          110                  3  3.5   2.5  8.67   \n",
+      "3           4        314          103                  2  2.0   3.0  8.21   \n",
+      "4           5        330          115                  5  4.5   3.0  9.34   \n",
+      "\n",
+      "   Research  Chance of Admit   \n",
+      "0         1              0.92  \n",
+      "1         1              0.72  \n",
+      "2         1              0.80  \n",
+      "3         0              0.65  \n",
+      "4         1              0.90  \n"
+     ]
+    }
+   ],
    "source": [
     "# Run this code:\n",
-    "admissions = pd.read_csv('../Admission_Predict.csv')"
+    "#admissions = pd.read_csv('../Admission_Predict.csv')\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Load the dataset\n",
+    "admissions = pd.read_csv('../Admission_Predict.csv')\n",
+    "\n",
+    "# Display the first few rows of the dataset\n",
+    "print(admissions.head())\n"
    ]
   },
   {
@@ -296,11 +556,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 201,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Serial No.  GRE Score  TOEFL Score  University Rating  SOP  LOR   CGPA  \\\n",
+      "0           1        337          118                  4  4.5   4.5  9.65   \n",
+      "1           2        316          104                  3  3.0   3.5  8.00   \n",
+      "2           3        322          110                  3  3.5   2.5  8.67   \n",
+      "3           4        314          103                  2  2.0   3.0  8.21   \n",
+      "4           5        330          115                  5  4.5   3.0  9.34   \n",
+      "\n",
+      "   Research  Chance of Admit   \n",
+      "0         1              0.92  \n",
+      "1         1              0.72  \n",
+      "2         1              0.80  \n",
+      "3         0              0.65  \n",
+      "4         1              0.90  \n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Load the dataset\n",
+    "admissions = pd.read_csv('../Admission_Predict.csv')\n",
+    "\n",
+    "# Display the first 5 rows of the dataset\n",
+    "print(admissions.head())\n"
    ]
   },
   {
@@ -312,11 +599,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 202,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing Data in Each Column:\n",
+      "Serial No.           0\n",
+      "GRE Score            0\n",
+      "TOEFL Score          0\n",
+      "University Rating    0\n",
+      "SOP                  0\n",
+      "LOR                  0\n",
+      "CGPA                 0\n",
+      "Research             0\n",
+      "Chance of Admit      0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Load the dataset\n",
+    "admissions = pd.read_csv('../Admission_Predict.csv')\n",
+    "\n",
+    "# Check for missing data in the dataset\n",
+    "missing_data = admissions.isnull().sum()\n",
+    "\n",
+    "# Display the result\n",
+    "print(\"Missing Data in Each Column:\")\n",
+    "print(missing_data)\n"
    ]
   },
   {
@@ -328,11 +644,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 203,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            GRE Score  TOEFL Score  University Rating  SOP  LOR   CGPA  \\\n",
+      "Serial No.                                                               \n",
+      "1                 337          118                  4  4.5   4.5  9.65   \n",
+      "2                 316          104                  3  3.0   3.5  8.00   \n",
+      "3                 322          110                  3  3.5   2.5  8.67   \n",
+      "4                 314          103                  2  2.0   3.0  8.21   \n",
+      "5                 330          115                  5  4.5   3.0  9.34   \n",
+      "\n",
+      "            Research  Chance of Admit   \n",
+      "Serial No.                              \n",
+      "1                  1              0.92  \n",
+      "2                  1              0.72  \n",
+      "3                  1              0.80  \n",
+      "4                  0              0.65  \n",
+      "5                  1              0.90  \n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Load the dataset\n",
+    "admissions = pd.read_csv('../Admission_Predict.csv')\n",
+    "\n",
+    "# Make the serial number column the index without removing it from the dataframe\n",
+    "admissions.set_index('Serial No.', inplace=True)\n",
+    "\n",
+    "# Display the first few rows to confirm the change\n",
+    "print(admissions.head())\n"
    ]
   },
   {
@@ -351,13 +699,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 204,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of duplicate rows based on 'GRE Score' and 'CGPA': 0\n",
+      "Number of rows where CGPA > 9 and the student has performed an investigation: 101\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Load the dataset\n",
+    "admissions = pd.read_csv('../Admission_Predict.csv')\n",
+    "\n",
+    "# Make the serial number column the index without removing it from the dataframe\n",
+    "admissions.set_index('Serial No.', inplace=True)\n",
+    "\n",
+    "# Check if 'GRE Score' and 'CGPA' uniquely identify the data\n",
+    "unique_check = admissions[['GRE Score', 'CGPA']].duplicated().sum()\n",
+    "print(f\"Number of duplicate rows based on 'GRE Score' and 'CGPA': {unique_check}\")\n",
+    "\n",
+    "# Find rows where CGPA > 9 and the student has performed an investigation\n",
+    "# Assuming there is a 'Research' column indicating whether the student has done research (1 means yes)\n",
+    "rows_condition = admissions[(admissions['CGPA'] > 9) & (admissions['Research'] == 1)]\n",
+    "\n",
+    "# Show the number of such rows\n",
+    "num_rows_condition = len(rows_condition)\n",
+    "print(f\"Number of rows where CGPA > 9 and the student has performed an investigation: {num_rows_condition}\")\n"
    ]
   },
   {
@@ -369,17 +745,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 205,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean chance of admit for applicants with CGPA > 9 and SOP < 3.5 is: 0.8019999999999999\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('../Admission_Predict.csv')\n",
+    "df.set_index('Serial No.', inplace=True)\n",
+    "\n",
+    "filtered_rows = df[(df['CGPA'] > 9) & (df['SOP'] < 3.5)]\n",
+    "mean_chance_of_admit = filtered_rows['Chance of Admit '].mean()\n",
+    "\n",
+    "print(f\"The mean chance of admit for applicants with CGPA > 9 and SOP < 3.5 is: {mean_chance_of_admit}\")\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -393,7 +785,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.7"
   },
   "toc": {
    "base_numbering": "",
